--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
   "name": "frontend-javascript-country-information-world-regions",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Inleiding",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.26.1"
+  },
   "devDependencies": {
-    "parcel": "^2.0.0",
-    "parcel-plugin-nuke-dist": "^1.0.1"
-  }
+    "parcel": "^2.4.1",
+    "parcel-plugin-nuke-dist": "^1.0.1",
+    "process": "^0.11.10"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SterreJalou/country-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SterreJalou/country-api/issues"
+  },
+  "homepage": "https://github.com/SterreJalou/country-api#readme"
 }
